Issue #46. Update README.